--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-d3-tree": "^1.13.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-sortable-tree": "^2.6.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
   },
