--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "react": "^16.7.0",
     "react-d3-tree": "^1.13.0",
     "react-dom": "^16.7.0",
-    "react-monaco-editor": "^0.25.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-sortable-tree": "^2.6.2",
+    "react-vtl-editor": "^0.3.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.84.0"
   },
